[gd_scene load_steps=3 format=3 uid="uid://drjv0owirpjnj"]

[ext_resource type="PackedScene" uid="uid://cit6hal55kyw1" path="res://Scenes/UI/OptionSlider.tscn" id="1_54pfg"]
[ext_resource type="Script" path="res://Scripts/UI/audio_settings.gd" id="1_yti7a"]

[node name="AudioSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yti7a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_bottom = 4.0
theme_override_constants/separation = 20

[node name="MusicControl" parent="VBoxContainer" instance=ExtResource("1_54pfg")]
layout_mode = 2
option_name = "Music"

[node name="SoundControl" parent="VBoxContainer" instance=ExtResource("1_54pfg")]
layout_mode = 2
option_name = "Sounds"

[connection signal="_slider_changed" from="VBoxContainer/MusicControl" to="." method="_on_music_control__slider_changed"]
[connection signal="_slider_changed" from="VBoxContainer/SoundControl" to="." method="_on_sound_control__slider_changed"]
